<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="fr.wildcodeschool.roomreservation.MainActivity">

    <Button
        android:id="@+id/button_add_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_person" />

    <Button
        android:id="@+id/button_view_person_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/view_persons_list" />

    <Button
        android:id="@+id/button_add_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_room" />

    <Button
        android:id="@+id/button_view_room_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_rooms_list" />

</LinearLayout>
